on-prem/ServiceMeshLite/API-gateway/manifest/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tier-2-adc

---
apiVersion: v1
kind: Namespace
metadata:
  name: team-hotdrink
---
apiVersion: v1
kind: Namespace
metadata:
  name: team-colddrink
---
