on-prem/ServiceMeshLite/API-gateway/manifest/content-routing-cpx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpx-cr-hotdrinks
spec:
  selector:
    matchLabels:
      app: cpx-cr-hotdrinks
  replicas: 1
  template:
    metadata:
      name: cpx-cr-hotdrinks
      labels:
        app: cpx-cr-hotdrinks
        app1: exporter
      annotations:
        NETSCALER_AS_APP: "True"
    spec:
      serviceAccountName: api-gw
      containers:
        - name: cpx-cr-hotdrinks
          image: "quay.io/citrix/citrix-k8s-cpx-ingress:13.0-52.24"
          securityContext: 
             privileged: true
          imagePullPolicy: Always
        # Add cic as a sidecar
        - name: cic
          image: "quay.io/citrix/citrix-k8s-ingress-controller:1.8.19"
          args:
            - --ingress-classes
              cr-hotdrink
          imagePullPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: cpx-cr-service-hotdrinks
  labels:
    app: cpx-cr-service-hotdrinks
spec:
  type: ClusterIP
  ports:
  - port: 443
    protocol: TCP
    name: https
    targetPort: 443
  selector:
    app: cpx-cr-hotdrinks

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpx-cr-colddrinks
spec:
  selector:
    matchLabels:
      app: cpx-cr-colddrinks
  replicas: 1
  template:
    metadata:
      name: cpx-cr-colddrinks
      labels:
        app: cpx-cr-colddrinks
        app1: exporter
      annotations:
        NETSCALER_AS_APP: "True"
    spec:
      serviceAccountName: api-gw
      containers:
        - name: cpx-cr-colddrinks
          image: "quay.io/citrix/citrix-k8s-cpx-ingress:13.0-52.24"
          securityContext: 
             privileged: true
          imagePullPolicy: Always
        # Add cic as a sidecar
        - name: cic
          image: "quay.io/citrix/citrix-k8s-ingress-controller:1.8.19"
          args:
            - --ingress-classes
              cr-colddrink
          imagePullPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: cpx-cr-service-colddrinks
  labels:
    app: cpx-cr-service-colddrinks
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    name: http
    targetPort: 80
#  - port: 443
#    name: https
#    targetPort: 443
  selector:
    app: cpx-cr-colddrinks

---
