on-prem/ServiceMeshLite/API-gateway/manifest/cpx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpx-ingress-hotdrinks
spec:
  selector:
    matchLabels:
      app: cpx-ingress-hotdrinks
  replicas: 1
  template:
    metadata:
      name: cpx-ingress-hotdrinks
      labels:
        app: cpx-ingress-hotdrinks
        app1: exporter
      annotations:
        NETSCALER_AS_APP: "True"
    spec:
      serviceAccountName: api-gw
      containers:
        - name: cpx-ingress-hotdrinks
          image: "quay.io/citrix/citrix-k8s-cpx-ingress:13.0-76.29"
          securityContext: 
             privileged: true
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /var/deviceinfo
              name: shared-data
            - mountPath: /cpx/
              name: cpx-volume
        # Add cic as a sidecar
        - name: cic
          image: "quay.io/citrix/citrix-k8s-ingress-controller:1.14.17"
          volumeMounts:
            - mountPath: /var/deviceinfo
              name: shared-data
          args:
            - --ingress-classes
              hotdrink
            - --default-ssl-certificate
              $(POD_NAMESPACE)/vpx-secret
          imagePullPolicy: Always
      volumes:
      - name: shared-data
        emptyDir: {}
      - name: cpx-volume
        emptyDir: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpx-ingress-colddrinks
spec:
  selector:
    matchLabels:
      app: cpx-ingress-colddrinks
  replicas: 1
  template:
    metadata:
      name: cpx-ingress-colddrinks
      labels:
        app: cpx-ingress-colddrinks
        app1: exporter
      annotations:
        NETSCALER_AS_APP: "True"
    spec:
      serviceAccountName: api-gw
      containers:
        - name: cpx-ingress-colddrinks
          image: "quay.io/citrix/citrix-k8s-cpx-ingress:13.0-76.29"
          securityContext: 
             privileged: true
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /var/deviceinfo
              name: shared-data
            - mountPath: /cpx/
              name: cpx-volume
        # Add cic as a sidecar
        - name: cic
          image: "quay.io/citrix/citrix-k8s-ingress-controller:1.14.17"
          volumeMounts:
            - mountPath: /var/deviceinfo
              name: shared-data          
          args:
            - --ingress-classes
              colddrink
          imagePullPolicy: Always
      volumes:
      - name: shared-data
        emptyDir: {}
      - name: cpx-volume
        emptyDir: {}

---

apiVersion: v1
kind: Service
metadata:
  name: lb-service-hotdrinks
  labels:
    app: lb-service-hotdrinks
spec:
  type: ClusterIP
  ports:
  - port: 443
    protocol: TCP
    name: https
    targetPort: 443
  selector:
    app: cpx-ingress-hotdrinks

---

apiVersion: v1
kind: Service
metadata:
  name: lb-service-colddrinks
  labels:
    app: lb-service-colddrinks
  annotations:
    service.citrix.com/service-type-0: 'SSL'
    service.citrix.com/ssl-termination-0: 'EDGE'
    service.citrix.com/ssl-certificate-data-0: |
      -----BEGIN CERTIFICATE-----
      MIIDpTCCAo2gAwIBAgIJAK1d51GLlmInMA0GCSqGSIb3DQEBCwUAMGkxCzAJBgNV
[...]
      XAvgD+atop7ghvGXI9ojM2YJE11a1t/alg==
      -----END CERTIFICATE-----
    service.citrix.com/ssl-key-data-0: |
      -----BEGIN RSA PRIVATE KEY-----
      MIIEowIBAAKCAQEAzfCzxJhzh3QXVQ/Co++ouW/bZVsrRuUNxQ18uHYBVb4e8aZg
[...]
      yamwhS2NHWJLC5VJJWHQBa0tBdw8cNfI8Zc02M5AW6Luy2HoA9mG
      -----END RSA PRIVATE KEY-----
spec:
  type: LoadBalancer
  ports:
  - port: 443
    protocol: TCP
    name: http
    targetPort: 80
#  - port: 443
#    name: https
#    targetPort: 443
  selector:
    app: cpx-ingress-colddrinks

---
