on-prem/ServiceMeshLite/API-gateway/manifest/docker-ui.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: default-service
  labels:
    app: words-web
spec:
  ports:
    - port: 80
      targetPort: 80
      name: web
  selector:
    app: words-web
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app: words-web
spec:
  selector:
    matchLabels:
      app: words-web
  template:
    metadata:
      labels:
        app: words-web
    spec:
      containers:
      - name: web
        image: dockersamples/k8s-wordsmith-web
        ports:
        - containerPort: 80
          name: words-web
